--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,46 @@
-<h1>Eat the Burger!</h1>
+<div class="bg">
+  <h1 class="text-center mb-5" id="title">Eat the Burger!</h1>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
+  <h2 class="text-center mb-5">Create burgers to eat.</h2>
+  <form class="form-inline justify-content-center">
+    <div class="form-group">
+      <label for="input" class="mr-3">New burger:</label>
+      <input type="text" id="newB" name="name">
+    </div>
 
-  <div class="form-group">
-    <label for="b">Enter a burger you want to eat, then click the Submit button</label>
-    <input type="text" id="b" name="name">
+    <button type="submit" class="create btn btn-outline-danger btn-sm ml-3">Create</button>
+  </form>
+
+  <div class="activity mt-2">
+    <div class="row">
+      <div class="col-4">
+        <h5 class="mb-3">New Burgers</h5>
+        <ul>
+          {{#each burgers}}
+          {{#unless devoured}}
+          <div class="mt-2">
+            {{this.burger_name}}
+            <button type="button" id="eat" value="1" class="ml-2 btn btn-success btn-sm fas fa-utensils"></button>
+          </div>
+          {{/unless}}
+          {{/each}}
+        </ul>
+      </div>
+      <div class="col-4"></div>
+      <div class="col-4">
+        <h5 class="mb-3">Eaten Burgers</h5>
+        <ul>
+          {{#each burgers}}
+          {{#if devoured}}
+          <div class="mt-2">
+            {{this.burger_name}}
+            <button type="button" id="trash" class="ml-2 btn btn-danger btn-sm far fa-trash-alt"></button>
+          </div>
+          {{/if}}
+          {{/each}}
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
