edited css file & package.json file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 	<!-- Fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<!-- Custom CSS -->
+	<!-- Custom & Reset CSS -->
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery.js"></script>
